# virgil

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  action.yml  docker-compose.yml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cli-binaries.yml  publish-cli.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260515_2000_initial_schema.py  20260515_2030_chat.py  20260516_0100_audit_secrets.py  20260516_0200_threat_intel.py  20260517_0100_finding_lifecycle.py  20260517_0200_pr_mode.py  20260517_0300_compliance.py  20260517_0400_reachability.py  20260517_0500_code_context.py  20260528_2000_widen_reports_format.py
apps/api/app/: config.py  main.py  seed.py
apps/api/app/db/: models.py  session.py
apps/api/app/routes/: audits.py  chat.py  events.py  findings.py  lifecycle.py  reports.py
apps/api/app/schemas/: audit.py
apps/api/app/security/: redaction.py  secrets.py  url_validator.py
apps/api/app/seed_data/: __init__.py  nodegoat.json
apps/api/app/services/: clusters.py  findings_export.py  intake.py  lifecycle.py  pdf.py  queue.py  reports.py  sarif.py  storage.py  suggested_questions.py  triage_refresh.py
apps/cli/: README.md  build.py  build_binary.py  pyproject.toml  virgil.spec
apps/cli/cli/: __init__.py  client.py  config.py  main.py  render.py
apps/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
apps/vscode/src/: api.ts  binary.ts  cli.ts  diagnostics.ts  extension.ts  types.ts
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/audits/: tabs.ts
apps/web/app/audits/[id]/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/web/app/audits/[id]/attack-surface/: page.tsx
apps/web/app/audits/[id]/chat/: page.tsx
apps/web/app/audits/[id]/findings/: page.tsx
apps/web/app/audits/[id]/findings/[fid]/: page.tsx
apps/web/app/audits/[id]/report/: page.tsx
apps/web/app/audits/[id]/triage/: page.tsx
apps/web/components/: attack-surface-grid.tsx  case-header.tsx  chat-console.tsx  code-context.tsx  confidence-chip.tsx  console-stream.tsx  findings-table.tsx  grounding-trace.tsx  owasp-badge.tsx  phase-timeline.tsx  provenance-tag.tsx  queue-banner.tsx  repo-profile.tsx  severity-chip.tsx  severity-ribbon.tsx  site-frame.tsx  submission-form.tsx  suppress-action.tsx  try-sample.tsx
apps/web/lib/: api.ts  demo.ts  server.ts  tool-labels.ts  types.ts
apps/worker/: pyproject.toml
apps/worker/worker/: celery_app.py  clone.py  config.py  db.py  notifications.py  pr_mode.py  sbom.py  tasks.py  threat_intel.py
apps/worker/worker/ai/: anthropic_provider.py  chat.py  enrich.py  narrative.py  openai_provider.py  priority.py  provider.py  safety.py
apps/worker/worker/ai/prompts/: system.py
apps/worker/worker/normalize/: __init__.py  category.py  code_context.py  compliance.py  dedupe.py  helpers.py  licenses.py  owasp_cwe.py  pipeline.py  reachability.py  redact.py  severity.py  threat_intel.py
apps/worker/worker/profile/: __init__.py  detect.py
apps/worker/worker/sandbox/: __init__.py  runner.py  zip_extract.py
apps/worker/worker/scanners/: __init__.py  base.py  codeql.py  gitleaks.py  semgrep.py  trivy.py
docker/: api.Dockerfile  entrypoint-api.sh  scanner.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: screencast.md
examples/: github-action-virgil.yml
tests/: conftest.py  test_cli.py  test_cli_scan_target.py  test_clusters.py  test_code_context.py  test_compliance.py  test_custom_rules.py  test_enrich_code_context.py  test_findings_export.py  test_helpers_hint.py  test_licenses.py  test_lifecycle.py  test_notifications.py  test_pr_mode.py  test_priority.py  test_private_clone.py  test_queue_route.py  test_reachability.py  test_report_artifacts.py  test_sarif.py  test_sbom.py  test_seed.py  test_suggested_questions.py  test_threat_intel.py  test_threat_intel_serialization.py  test_triage_refresh.py  test_url_validator.py  test_zip_extract.py
tests/api/: test_api_routes.py
tests/e2e/: test_compose_smoke.py
tests/normalize/: test_dedupe.py  test_owasp_cwe.py  test_pipeline.py  test_redact.py  test_severity.py
tests/safety/: test_chat_retrieve.py  test_chat_streaming.py  test_safety.py
tests/scanners/: test_codeql.py  test_gitleaks.py
