[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virgil-api"
version = "0.1.0"
description = "FastAPI service for Virgil — the security audit platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "celery>=5.3",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.0",
  "boto3>=1.34",
  "weasyprint>=62",
  "cryptography>=42",
  "audit-core",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
audit-core = { path = "../../packages/audit_core", editable = true }
