[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virgil"
version = "0.1.0"
description = "CLI for Virgil — self-hosted security audit with the triage built in. Real scanners + clustering + LLM priority queue + code-grounded chat."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Virgil contributors" },
]
keywords = [
  "security",
  "audit",
  "sast",
  "sca",
  "semgrep",
  "trivy",
  "gitleaks",
  "code-audit",
  "vulnerability",
  "ai",
  "llm",
  "cli",
  "self-hosted",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://virgilhq.app"
Repository = "https://github.com/ayaanmaliksgithub/virgil"
Issues = "https://github.com/ayaanmaliksgithub/virgil/issues"
Documentation = "https://github.com/ayaanmaliksgithub/virgil#readme"
Changelog = "https://github.com/ayaanmaliksgithub/virgil/releases"

[project.scripts]
virgil = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/cli",
  "/README.md",
  "/pyproject.toml",
]
