[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virgil-worker"
version = "0.1.0"
description = "Scanner orchestration worker for Virgil — the security audit platform."
requires-python = ">=3.11"
dependencies = [
  "celery>=5.3",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "anthropic>=0.40",
  "openai>=1.40",
  "httpx>=0.27",
  "audit-core",
  "virgil-api",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
audit-core = { path = "../../packages/audit_core", editable = true }
virgil-api = { path = "../api", editable = true }
